--- a/learning_web/package.json
+++ b/learning_web/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.20.0",
+    "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-kit": "^0.31.1",
+    "drizzle-orm": "^0.44.0",
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
     "react": "^19.1.0",
@@ -22,7 +25,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.17.55",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
