--- a/learning_web/package.json
+++ b/learning_web/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@clerk/nextjs": "^6.20.0",
     "@neondatabase/serverless": "^1.0.0",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-visually-hidden": "^1.2.3",
     "@types/pg": "^8.15.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -22,9 +24,11 @@
     "drizzle-orm": "^0.44.1",
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
+    "next-themes": "^0.4.6",
     "pg": "^8.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
