--- a/learning_web/package.json
+++ b/learning_web/package.json
@@ -15,6 +15,7 @@
     "@clerk/nextjs": "^6.20.0",
     "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "@types/pg": "^8.15.2",
@@ -31,7 +32,8 @@
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.0",
     "sonner": "^2.0.5",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
