--- a/learning_web/package.json
+++ b/learning_web/package.json
@@ -30,6 +30,7 @@
     "pg": "^8.16.0",
     "react": "^19.1.0",
     "react-circular-progressbar": "^2.2.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
     "react-use": "^17.6.0",
     "sonner": "^2.0.5",
