--- a/learning_web/package.json
+++ b/learning_web/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@clerk/nextjs": "^6.20.0",
     "@neondatabase/serverless": "^1.0.0",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "@types/pg": "^8.15.2",
