--- a/learning_web/package.json
+++ b/learning_web/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "db:studio": "npx drizzle-kit studio",
     "db:push": "npx drizzle-kit push",
-    "db:seed": "tsx ./scripts/seed.ts"
+    "db:seed": "tsx ./scripts/seed.ts",
+    "db:reset": "tsx ./scripts/reset.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.20.0",
@@ -30,7 +31,9 @@
     "next": "^15.3.2",
     "next-themes": "^0.4.6",
     "pg": "^8.16.0",
+    "ra-data-simple-rest": "^5.8.3",
     "react": "^19.1.0",
+    "react-admin": "^5.8.3",
     "react-circular-progressbar": "^2.2.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
