--- a/learning_web/package.json
+++ b/learning_web/package.json
@@ -28,8 +28,16 @@
     "dotenv": "^16.5.0",
     "drizzle-kit": "^0.31.1",
     "drizzle-orm": "^0.44.1",
+    "i18next": "^25.3.0",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
+    "i18next-resources-to-backend": "^1.2.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
+    "next-i18next": "^15.4.2",
+    "next-international": "^1.3.1",
+    "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
     "pg": "^8.16.0",
     "ra-data-simple-rest": "^5.8.3",
@@ -38,6 +46,7 @@
     "react-circular-progressbar": "^2.2.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.3",
     "react-use": "^17.6.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
