--- a/learning_web/package.json
+++ b/learning_web/package.json
@@ -40,6 +40,7 @@
     "next-international": "^1.3.1",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
+    "openai": "^5.10.1",
     "pg": "^8.16.0",
     "ra-data-simple-rest": "^5.8.3",
     "react": "^19.1.0",
